fixed spacing issue in footer

--- a/styles/index.css
+++ b/styles/index.css
@@ -86,7 +86,7 @@ footer {
     color: white;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding: 20px 40px;
     flex-wrap: wrap;
 }
